--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
         <header>
             <div class="tittle">
-                <img src="Assets/Logo.svg">
-                <h2>SISTOK</h2>
+                <img src="Assets/SISTOK_header.svg">
             </div>
 
             <div class="options">
@@ -29,8 +28,10 @@
 
             </div>
 
-            <a href="#">Cadastre-se</a>
-            <button id="entrar">Entrar</button>
+            <div class="cadastre-se">
+                <a href="#">Cadastre-se</a>
+                <button id="entrar">Entrar</button>
+            </div>
 
         </header>
 
@@ -38,41 +39,40 @@
 
             <div class="hero_top">
                 <h1>Organize seu negócio com <br> o sistema Sistok</h1>
-                <p>O software ideal para pequenos e méfios negócios.Tenha todos os <br> controles do seu negócio em um
+                <p>O software ideal para pequenos e médios negócios.Tenha todos os <br> controles do seu negócio em um
                     único
                     lugar.</p>
                 <button id="quero_conhecer">Quero Conhecer</button>
                 <img src="Assets/OBJECTS.svg">
             </div>
+            <br>
+            <br>
 
 
             <div class="hero_options" id="solucao">
                 <img src="Assets/Computer.img.svg">
                 <h4>Solução</h4>
                 <p>100% SaaS</p>
-
             </div>
 
             <div class="hero_options" id="plataforma">
                 <img src="Assets/Cloud.img.svg">
                 <h4>Plataforma</h4>
                 <p>em Cloud</p>
-
             </div>
 
             <div class="hero_options" id="focado_em">
                 <img src="Assets/Star.img.svg">
                 <h4>Focado em</h4>
                 <p>Costumer Success</p>
-
             </div>
 
             <div class="hero_options" id="seguranca">
                 <img src="Assets/Shield.img.svg">
                 <h4>Segurança</h4>
                 <p>para seu negóvio</p>
-
             </div>
+
         </div>
 
         <div class="servicos">
@@ -81,35 +81,32 @@
                 <p>SERVIÇOS</p>
                 <h2>O sistema de gestão Sistok é completo para atender <br>diversos segmentos do mercado empresarial
                 </h2>
-
             </div>
+            <br>
+            <br>
 
             <div class="servico_options">
                 <img src="Assets/Graphic.img.svg">
                 <h4>Controle de vendas</h4>
                 <p>Controle suas vendas e fluxo de <br> caixa de forma fácil e eficiente.</p>
-
             </div>
 
             <div class="servico_options">
                 <img src="Assets/Boxes.img.svg">
                 <h4>Controle de estoque</h4>
                 <p>Controle seu estoque on-line, de <br> maneira fácil e automatizada.</p>
-
             </div>
 
             <div class="servico_options">
                 <img src="Assets/Person.img.svg">
                 <h4>Gestão de Clientes</h4>
                 <p>Gerencie sua carteira de <br> clientes e facilite seu trabalho.</p>
-
             </div>
 
             <div class="servico_options">
                 <img src="Assets/Truck.img.svg">
                 <h4>Gestão de fornecedores</h4>
                 <p>Gerencie seus fornecedores <br> facilmente on-line.</p>
-
             </div>
 
 
@@ -119,11 +116,132 @@
 
             <div class="sobre_nos_left">
                 <p>SOBRE NÓS</p>
-              <h2>Um Sistime de sucesso para te ajudar!</h2>
-              <img src="Assets/Girl.img.svg"> 
+                <h2>Um Sistime de sucesso para te ajudar!</h2>
+                <img src="Assets/Girl.img.svg">
+            </div>
+
+            <div class="sobre_nos_right">
+                <p>O sistema de gestão Sistok é um serviço da empresa Tec Code, focada em soluçoes de <br> sistemas
+                    on-line e desktops para pequenas e médias empresas.</p>
+                    
+                <p>Fundada em 2019, procuramos sempre melhorar a experiência do cliente com nossos <br> serviços. Nosso
+                    time é super qualificado e o melhor, ama o que faz.</p>
+             
+                <p>Vem com a gente transformar seu negócio</p>
+                <img src="Assets/Smile_Face.svg">
+
+                <button>Nossos Cases <img src="Assets/Nossos_Cases_Arrow.img.svg"></button>
             </div>
 
         </div>
+
+        <div class="atuacao">
+
+            <p>ATUAÇAO</p>
+            <h2>O Sistok aplica-se a diferentes tipos de negócios, de <br> fácil utilizaçao, é rápido e seguro para
+                você.</h2>
+
+            <div class="atuacao_options">
+                <img src="Assets/Martini.svg">
+                <h4>Bares</h4>
+            </div>
+
+            <div class="atuacao_options">
+                <img src="Assets/Food_plate.svg">
+                <h4>Restaurantes</h4>
+            </div>
+
+            <div class="atuacao_options">
+                <img src="Assets/Market_bag.svg" alt="">
+                <h4>Mercearias</h4>
+            </div>
+
+            <div class="atuacao_options">
+                <img src="Assets/Drink.svg">
+                <h4>Adegas</h4>
+            </div>
+
+        </div>
+
+        <div class="planos">
+
+            <p>PLANOS</p>
+            <h2>Escolha um plano para experimentar o Sistok</h2>
+
+            <div class="planos_options">
+                <h4>Iniciante</h4>
+                <img src="Assets/R$50.svg">
+                <p>Emissão de notas fiscais,<br> gerenciamento de estoques e <br> controles básicos.</p>
+                <button>Escolher plano</button>
+            </div>
+
+            <div class="planos_options">
+                <h4>Básico</h4>
+                <img src="Assets/R$100.svg">
+                <p>Gerenciamento de compras,<br> vendas e finanças.</p>
+                <button>Escolher Plano</button>
+            </div>
+
+            <div id="roxo" class="planos_options">
+                <h4>Popular</h4>
+                <h4>Essencial</h4>
+                <img src="Assets/R$150.svg">
+                <p>Automaçoes para melhor <br> eficiência da operaçao.</p>
+                <button>Escolher Plano</button>
+            </div>
+
+            <div class="planos_options">
+                <h4>Grande</h4>
+                <img src="Assets/R$200.svg">
+                <p>Alto volume de pedidos.</p>
+                <button>Escolher plano</button>
+            </div>
+
+            <img src="Assets/Comentários.svg">
+
+        </div>
+
+        <footer>
+
+            <div class="recursos">
+                <h4>Recursos</h4>
+                <a href="#">E-commerce</a>
+                <a href="#">Comércio</a>
+                <a href="#">Serviço</a>
+                <a href="#">Atuação</a>
+                <a href="#">Ajuda</a>
+            </div>
+
+            <div class="precos">
+                <h4>Preços</h4>
+                <a href="#">Planos</a>
+                <a href="#">Como comprar um plano</a>                     
+                <a href="#">Comparar planos</a>
+            </div>
+
+            <div class="contato">
+                <h4>Contato</h4>
+                <a href="#">Fale Conosco</a>
+            </div>
+
+            <div class="institucional">
+                <h4>institucional</h4>
+                <a href="#">Sobre nós</a>
+                <a href="#">Trabalhe Conosco</a>        
+                <a href="#">Política de privacidade</a>
+            </div>
+
+            <div class="textfield">
+               <h4>Assine nossa newsletter.</h4> 
+               <input type="text" placeholder="E-mail">
+               <img src="Assets/email.svg">
+            </div>
+
+            <div class="bottom">
+                <h5>Copyright 2021 Sistok</h5>
+            </div>
+
+        </footer>
 
 
     </main>
