Alinhando as opçoes do hero_bottom

--- a/index.html
+++ b/index.html
@@ -43,34 +43,37 @@
                     único
                     lugar.</p>
                 <button id="quero_conhecer">Quero Conhecer</button>
+            </div>
+
+            <div class="hero_imagem">
                 <img src="Assets/OBJECTS.svg">
             </div>
-            <br>
-            <br>
 
+            <div class="hero_bottom">
+                <div class="hero_options" id="solucao">
+                    <img src="Assets/Computer.img.svg">
+                    <h4>Solução</h4>
+                    <p>100% SaaS</p>
+                </div>
 
-            <div class="hero_options" id="solucao">
-                <img src="Assets/Computer.img.svg">
-                <h4>Solução</h4>
-                <p>100% SaaS</p>
-            </div>
+                <div class="hero_options" id="plataforma">
+                    <img src="Assets/Cloud.img.svg">
+                    <h4>Plataforma</h4>
+                    <p>em Cloud</p>
+                </div>
 
-            <div class="hero_options" id="plataforma">
-                <img src="Assets/Cloud.img.svg">
-                <h4>Plataforma</h4>
-                <p>em Cloud</p>
-            </div>
+                <div class="hero_options" id="focado_em">
+                    <img src="Assets/Star.img.svg">
+                    <h4>Focado em</h4>
+                    <p>Costumer Success</p>
+                </div>
 
-            <div class="hero_options" id="focado_em">
-                <img src="Assets/Star.img.svg">
-                <h4>Focado em</h4>
-                <p>Costumer Success</p>
-            </div>
+                <div class="hero_options" id="seguranca">
+                    <img src="Assets/Shield.img.svg">
+                    <h4>Segurança</h4>
+                    <p>para seu negóvio</p>
+                </div>
 
-            <div class="hero_options" id="seguranca">
-                <img src="Assets/Shield.img.svg">
-                <h4>Segurança</h4>
-                <p>para seu negóvio</p>
             </div>
 
         </div>
@@ -123,10 +126,10 @@
             <div class="sobre_nos_right">
                 <p>O sistema de gestão Sistok é um serviço da empresa Tec Code, focada em soluçoes de <br> sistemas
                     on-line e desktops para pequenas e médias empresas.</p>
-                    
+
                 <p>Fundada em 2019, procuramos sempre melhorar a experiência do cliente com nossos <br> serviços. Nosso
                     time é super qualificado e o melhor, ama o que faz.</p>
-             
+
                 <p>Vem com a gente transformar seu negócio</p>
                 <img src="Assets/Smile_Face.svg">
 
@@ -215,7 +218,7 @@
             <div class="precos">
                 <h4>Preços</h4>
                 <a href="#">Planos</a>
-                <a href="#">Como comprar um plano</a>                     
+                <a href="#">Como comprar um plano</a>
                 <a href="#">Comparar planos</a>
             </div>
 
@@ -227,14 +230,14 @@
             <div class="institucional">
                 <h4>institucional</h4>
                 <a href="#">Sobre nós</a>
-                <a href="#">Trabalhe Conosco</a>        
+                <a href="#">Trabalhe Conosco</a>
                 <a href="#">Política de privacidade</a>
             </div>
 
             <div class="textfield">
-               <h4>Assine nossa newsletter.</h4> 
-               <input type="text" placeholder="E-mail">
-               <img src="Assets/email.svg">
+                <h4>Assine nossa newsletter.</h4>
+                <input type="text" placeholder="E-mail">
+                <img src="Assets/email.svg">
             </div>
 
             <div class="bottom">
