--- a/index.html
+++ b/index.html
@@ -103,25 +103,25 @@
 
 
             <div class="servicos_bottom">
-                <div class="servico_options">
+                <div id="controle_de_vendas" class="servico_options">
                     <img src="Assets/Graphic.img.svg">
                     <h4>Controle de vendas</h4>
                     <p>Controle suas vendas e fluxo de <br> caixa de forma fácil e eficiente.</p>
                 </div>
 
-                <div class="servico_options">
+                <div id="controle_de_estoque" class="servico_options">
                     <img src="Assets/Boxes.img.svg">
                     <h4>Controle de estoque</h4>
                     <p>Controle seu estoque on-line, de <br> maneira fácil e automatizada.</p>
                 </div>
 
-                <div class="servico_options">
+                <div id="gestao_de_clientes" class="servico_options">
                     <img src="Assets/Person.img.svg">
                     <h4>Gestão de Clientes</h4>
                     <p>Gerencie sua carteira de <br> clientes e facilite seu trabalho.</p>
                 </div>
 
-                <div class="servico_options">
+                <div id="gestao_de_fornecedores" class="servico_options">
                     <img src="Assets/Truck.img.svg">
                     <h4>Gestão de fornecedores</h4>
                     <p>Gerencie seus fornecedores <br> facilmente on-line.</p>
