Finalizando Sobre Nós e Atuação

--- a/index.html
+++ b/index.html
@@ -133,52 +133,68 @@
 
         <div class="sobre_nos">
 
-            <div class="sobre_nos_left">
-                <p>SOBRE NÓS</p>
-                <h2>Um Sistime de sucesso para te ajudar!</h2>
-                <img src="Assets/Girl.img.svg">
-            </div>
+            <div class="left-right">
 
-            <div class="sobre_nos_right">
-                <p>O sistema de gestão Sistok é um serviço da empresa Tec Code, focada em soluçoes de <br> sistemas
-                    on-line e desktops para pequenas e médias empresas.</p>
+                <div class="sobre_nos_left">
+                    <p>SOBRE NÓS</p>
+                    <h2>Um Sistime de sucesso para te ajudar!</h2>
+                    <img src="Assets/Girl.img.svg">
+                </div>
 
-                <p>Fundada em 2019, procuramos sempre melhorar a experiência do cliente com nossos <br> serviços.
-                    Nosso
-                    time é super qualificado e o melhor, ama o que faz.</p>
+                <div class="sobre_nos_right">
+                    <p id="sobre_p1">O sistema de gestão Sistok é um serviço da empresa Tec Code, focada em soluçoes de
+                        <br> sistemas
+                        on-line e desktops para pequenas e médias empresas.
+                    </p>
 
-                <p>Vem com a gente transformar seu negócio</p>
-                <img src="Assets/Smile_Face.svg">
+                    <p id="sobre_p2">Fundada em 2019, procuramos sempre melhorar a experiência do cliente com nossos
+                        <br> serviços.
+                        Nosso time é super qualificado e o melhor, ama o que faz.
+                    </p>
 
-                <button>Nossos Cases <img src="Assets/Nossos_Cases_Arrow.img.svg"></button>
+                    <div class="p3">
+                        <p id="sobre_p3">Vem com a gente transformar seu negócio</p>
+                        <img src="Assets/Smile_Face.svg">
+                    </div>
+
+                    <button id="nossos_cases">Nossos Cases <img src="Assets/Nossos_Cases_Arrow.img.svg"></button>
+                </div>
+
             </div>
 
         </div>
 
         <div class="atuacao">
 
-            <p>ATUAÇAO</p>
-            <h2>O Sistok aplica-se a diferentes tipos de negócios, de <br> fácil utilizaçao, é rápido e seguro para
-                você.</h2>
+            <div class="atuacao_top">
+                <p>ATUAÇAO</p>
+                <h2>O Sistok aplica-se a diferentes tipos de negócios, de <br> fácil utilizaçao, é rápido e seguro para
+                    você.</h2>
 
-            <div class="atuacao_options">
-                <img src="Assets/Martini.svg">
-                <h4>Bares</h4>
             </div>
 
-            <div class="atuacao_options">
-                <img src="Assets/Food_plate.svg">
-                <h4>Restaurantes</h4>
-            </div>
+            <div class="atuacao_bottom">
 
-            <div class="atuacao_options">
-                <img src="Assets/Market_bag.svg" alt="">
-                <h4>Mercearias</h4>
-            </div>
+                <div class="atuacao_options">
+                    <img src="Assets/Martini.svg">
+                    <h4 id="bares">Bares</h4>
+                </div>
 
-            <div class="atuacao_options">
-                <img src="Assets/Drink.svg">
-                <h4>Adegas</h4>
+                <div class="atuacao_options">
+                    <img src="Assets/Food_plate.svg">
+                    <h4 id="restaurantes">Restaurantes</h4>
+                </div>
+
+                <div class="atuacao_options">
+                    <img src="Assets/Market_bag.svg" alt="">
+                    <h4 id="mercearias">Mercearias</h4>
+                </div>
+
+                <div class="atuacao_options">
+                    <img src="Assets/Drink.svg">
+                    <h4 id="adegas">Adegas</h4>
+                </div>
+
             </div>
 
         </div>
