--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 
             <div class="hero_bottom">
+
                 <div class="hero_options" id="solucao">
                     <img src="Assets/Computer.img.svg">
                     <div class="options_text">
@@ -69,6 +70,7 @@
                         <h4>Plataforma</h4>
                         <p id="em_cloud">em Cloud</p>
                     </div>
+
                 </div>
 
                 <div class="hero_options" id="focado_em">
@@ -201,39 +203,48 @@
 
         <div class="planos">
 
-            <p>PLANOS</p>
-            <h2>Escolha um plano para experimentar o Sistok</h2>
-
-            <div class="planos_options">
-                <h4>Iniciante</h4>
-                <img src="Assets/R$50.svg">
-                <p>Emissão de notas fiscais,<br> gerenciamento de estoques e <br> controles básicos.</p>
-                <button>Escolher plano</button>
+            <div class="planos_top">
+                <p>PLANOS</p>
+                <h2>Escolha um plano para experimentar o Sistok</h2>
             </div>
 
-            <div class="planos_options">
-                <h4>Básico</h4>
-                <img src="Assets/R$100.svg">
-                <p>Gerenciamento de compras,<br> vendas e finanças.</p>
-                <button>Escolher Plano</button>
+            <div class="planos_bottom">
+
+                <div id="iniciante" class="planos_options">
+                    <h4>Iniciante</h4>
+                    <img src="Assets/R$50.svg">
+                    <p>Emissão de notas fiscais,<br> gerenciamento de estoques e <br> controles básicos.</p>
+                    <button>Escolher plano</button>
+                </div>
+
+                <div id="basico" class="planos_options">
+                    <h4>Básico</h4>
+                    <img src="Assets/R$100.svg">
+                    <p>Gerenciamento de compras,<br> vendas e finanças.</p>
+                    <button>Escolher Plano</button>
+                </div>
+
+                <div id="popular" class="planos_options">
+                    <h4>Popular</h4>
+                    <h4 id="essencial">Essencial</h4>
+                    <img src="Assets/R$150.svg">
+                    <p>Automaçoes para melhor <br> eficiência da operaçao.</p>
+                    <button>Escolher Plano</button>
+                </div>
+
+                <div id="grande" class="planos_options">
+                    <h4>Grande</h4>
+                    <img src="Assets/R$200.svg">
+                    <p>Alto volume de pedidos.</p>
+                    <button>Escolher plano</button>
+                </div>
+
             </div>
 
-            <div id="roxo" class="planos_options">
-                <h4>Popular</h4>
-                <h4>Essencial</h4>
-                <img src="Assets/R$150.svg">
-                <p>Automaçoes para melhor <br> eficiência da operaçao.</p>
-                <button>Escolher Plano</button>
-            </div>
+            <div id="planos_img">
+                <img src="Assets/Comentários.svg">
 
-            <div class="planos_options">
-                <h4>Grande</h4>
-                <img src="Assets/R$200.svg">
-                <p>Alto volume de pedidos.</p>
-                <button>Escolher plano</button>
             </div>
-
-            <img src="Assets/Comentários.svg">
 
         </div>
 
