Configurando o footer(HTML alterado significativamente)

--- a/index.html
+++ b/index.html
@@ -248,35 +248,39 @@
 
         </div>
 
-        <footer>
+    </main>
 
-            <div class="recursos">
+    <footer>
+
+        <div class="container">
+
+            <ul id="recursos">
                 <h4>Recursos</h4>
-                <a href="#">E-commerce</a>
-                <a href="#">Comércio</a>
-                <a href="#">Serviço</a>
-                <a href="#">Atuação</a>
-                <a href="#">Ajuda</a>
-            </div>
+                <li> <a id="e-commerce" href="#">E-commerce</a> </li>
+                <li> <a id="comercio" href="#">Comércio</a> </li>
+                <li> <a id="servico" href="#">Serviço</a> </li>
+                <li> <a id="atuacao" href="#">Atuação</a> </li>
+                <li> <a id="ajuda" href="#">Ajuda</a> </li>
+            </ul>
 
-            <div class="precos">
+            <ul id="precos">
                 <h4>Preços</h4>
-                <a href="#">Planos</a>
-                <a href="#">Como comprar um plano</a>
-                <a href="#">Comparar planos</a>
-            </div>
+                <li> <a id="planos" href="#">Planos</a> </li>
+                <li> <a id="como_comprar" href="#">Como comprar um plano</a> </li>
+                <li> <a id="comparar_planos" href="#">Comparar planos</a> </li>
+            </ul>
 
-            <div class="contato">
+            <ul id="contatos">
                 <h4>Contato</h4>
-                <a href="#">Fale Conosco</a>
-            </div>
+                <li> <a id="fale_conosco" href="#">Fale Conosco</a> </li>
+            </ul>
 
-            <div class="institucional">
+            <ul id="institucional">
                 <h4>institucional</h4>
-                <a href="#">Sobre nós</a>
-                <a href="#">Trabalhe Conosco</a>
-                <a href="#">Política de privacidade</a>
-            </div>
+                <li> <a id="sobre_nos" href="#">Sobre nós</a> </li>
+               <li> <a id="trabalhe_conosco" href="#">Trabalhe Conosco</a> </li>
+                <li> <a id="politica_privacidade" href="#">Política de privacidade</a> </li>
+            </ul>
 
             <div class="textfield">
                 <h4>Assine nossa newsletter.</h4>
@@ -284,14 +288,18 @@
                 <img src="Assets/email.svg">
             </div>
 
-            <div class="bottom">
-                <h5>Copyright 2021 Sistok</h5>
-            </div>
+           
 
-        </footer>
+        </div>
+
+        <div class="bottom">
+            <h5>Copyright 2021 Sistok</h5>
+        </div>
+
+    </footer>
 
 
-    </main>
+
 
 
 </body>
