--- a/index.html
+++ b/index.html
@@ -278,17 +278,22 @@
             <ul id="institucional">
                 <h4>institucional</h4>
                 <li> <a id="sobre_nos" href="#">Sobre nós</a> </li>
-               <li> <a id="trabalhe_conosco" href="#">Trabalhe Conosco</a> </li>
+                <li> <a id="trabalhe_conosco" href="#">Trabalhe Conosco</a> </li>
                 <li> <a id="politica_privacidade" href="#">Política de privacidade</a> </li>
             </ul>
 
             <div class="textfield">
                 <h4>Assine nossa newsletter.</h4>
-                <input type="text" placeholder="E-mail">
-                <img src="Assets/email.svg">
+
+                <div class="input">
+                    <input type="text" placeholder="E-mail">
+                    <img src="Assets/Arrow_input.svg">
+
+                </div>
+
             </div>
 
-           
+
 
         </div>
 
